--- a/moocfile.html
+++ b/moocfile.html
@@ -38,13 +38,13 @@
     </style>
 </head>
 <body>
-    <div class="certificate-container">
-        <button class="certificate-btn" onclick="openCertificate('https://drive.google.com/file/d/1QSNmouY-m2QNswMdghklHiaFYw_TySpA/view?usp=sharing')"> Course Certificate </button>
+     <div class="certificate-container">
+        <button class="certificate-btn" onclick="openCertificate('certificate1.jpg')"> Course Certificate </button>
     </div>
 
     <script>
-        function openCertificate(pdfUrl) {
-            window.open(pdfUrl, '_blank');
+        function openCertificate(imageSrc) {
+            window.open(imageSrc, '_blank');
         }
     </script>
 </body>
