--- a/moocfile.html
+++ b/moocfile.html
@@ -24,7 +24,7 @@
             gap: 15px;
         }
         .certificate-btn {
-            background-color: #007BFF;
+            background-color: #3071bf;
             color: white;
             padding: 10px 20px;
             border: none;
@@ -33,7 +33,7 @@
             border-radius: 5px;
         }
         .certificate-btn:hover {
-            background-color: #0056b3;
+            background-color: #3071bf;
         }
     </style>
 </head>
